feat(config): update GenAI timeout and retry settings for improved performance
- Added GENAI_TIMEOUT and GENAI_MAX_RETRIES to .env.example and config.py for Gemini provider.
- Increased OPENAI_TIMEOUT to 300 seconds and reduced OPENAI_MAX_RETRIES to 2 to optimize request handling.
- Updated GenAI image and text providers to utilize new timeout and retry configurations with exponential backoff.

--- a/.env.example
+++ b/.env.example
@@ -7,15 +7,19 @@ AI_PROVIDER_FORMAT=gemini
 GOOGLE_API_KEY=your-api-key-here
 # 代理示例: https://aihubmix.com/gemini
 GOOGLE_API_BASE=https://generativelanguage.googleapis.com
+# GenAI (Gemini) 超时时间（秒），默认300秒
+GENAI_TIMEOUT=300.0
+# GenAI (Gemini) 最大重试次数（应用层实现），默认2次
+GENAI_MAX_RETRIES=2
 
 # OpenAI 格式配置（当 AI_PROVIDER_FORMAT=openai 时使用）
 OPENAI_API_KEY=your-api-key-here
 # 代理示例: https://aihubmix.com/v1
 OPENAI_API_BASE=https://api.openai.com/v1
-# 超时时间，默认60s
-OPENAI_TIMEOUT=60.0
-# 最多重试次数，默认3次
-OPENAI_MAX_RETRIES=3
+# 超时时间（秒），默认300秒
+OPENAI_TIMEOUT=300.0
+# 最多重试次数，减少重试避免累积超时，默认2次
+OPENAI_MAX_RETRIES=2
 
 # AI 模型配置
 TEXT_MODEL=gemini-3-flash-preview
